--- a/Ch 1 Counting.ipynb
+++ b/Ch 1 Counting.ipynb
@@ -9,6 +9,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a365fb10-f0e6-4469-86e2-c8e939ff0cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The source of the content is freely available online\n",
+    "# https://drive.google.com/file/d/1VmkAAGOYCTORq1wxSQqy255qLJjTNvBI/view\n",
+    "# https://projects.iq.harvard.edu/stat110/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f665611a-0736-4cfe-a7cb-60b96043f250",
    "metadata": {},
