--- a/Cheat Sheet.ipynb
+++ b/Cheat Sheet.ipynb
@@ -9,6 +9,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14bad7b6-e4c4-476b-9364-89d4fa4f7305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The source of the content is freely available online\n",
+    "# https://drive.google.com/file/d/1VmkAAGOYCTORq1wxSQqy255qLJjTNvBI/view\n",
+    "# https://projects.iq.harvard.edu/stat110/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "61eaa04a-e05b-4260-9fea-ad4e1a75244c",
    "metadata": {},
@@ -828,14 +840,6 @@
     "\n",
     "3. Chicken-Egg: if there are $Z \\text{~} Pois(\\lambda)$ items and we randomly and independently 'accept' each item with probability $p$, then the number of accepted items is $Z_1 \\text{~} Pois(\\lambda p)$, and the number of rejected items is $Z_2 \\text{~} Pois(\\lambda (1-p))$, with $Z_1$ independent of $Z_2$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a031f6b-b605-4fb7-bd1e-691bc58e2758",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
