--- a/Ch 1 Counting.ipynb
+++ b/Ch 1 Counting.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a365fb10-f0e6-4469-86e2-c8e939ff0cc4",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
     "\n",
     "For intuition why it should not be surprissing, note that with $23$ people there are $\\binom{23}{2} = 253$ pairs of people, any of which could be a birthday match.\n",
     "\n",
-    "**get fig 1.5**"
+    "<img src=\"img/fig 1-5.png\" style=\"height: 400px; width:auto;\">"
    ]
   },
   {
@@ -219,7 +219,11 @@
    "source": [
     "<h4>Example 1.4.12 (Liebniz's Mistake)</h4> \n",
     "\n",
-    "**get from notes**"
+    "If we roll two fair dice, which is more likely: a sum of $11$ or $12$?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "Label the dice $A$ and $B$, and consider each to be a sub-experiment. $(5,6)$ and $(6,5)$ sum to $11$, however only $(6,6)$ sums to $12$. Therefore, a sum of 11 is twice as likely. The probability is $\\frac{1}{18}$ for $11$, and $\\frac{1}{36}$ for $12$."
    ]
   },
   {
@@ -439,7 +443,13 @@
    "source": [
     "<h4>Example 1.4.20 (Full House in Poker)</h4>\n",
     "\n",
-    "**get from notes**"
+    "What is the probability of a full house in poker?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "There are $13$ choices for what rank we have 3 of. There are $\\binom{4}{3}$ ways to choose which cards of that rank (e.g. 7s) we have. Then there are $12$ choices for what rank we have $2$ of, and $\\binom{4}{2}$ ways to choose two cards of that rank.</p>\n",
+    "\n",
+    "$$\\frac{ 13 \\binom{4}{3} 12 \\binom{4}{2} }{ \\binom{52}{5} } = \\frac{3744}{2598960} = 0.00144$$"
    ]
   },
   {
