--- a/Ch 2 Conditional Probability.ipynb
+++ b/Ch 2 Conditional Probability.ipynb
@@ -329,8 +329,7 @@
     "\n",
     "For intuition, consider a population of $10,000$ people, where $100$ have the disease and $9,900$ do not. If we tested everybody in the population, we'd expect that out of the 100 diseased individuals, 95 would test positive and $5$ would test negative. Out of the $9,900$ healthy individuals, we'd expect $(0.95)(9900) \\approx 9405$ to test negative and $495$ to test positive. The $95$ TPs are far outnumbered by the $495$ FPs, so most people who test positive don't actually have the disease.\n",
     "\n",
-    "**img, pg 57**\n",
-    "\n",
+    "<img src=\"img/fig 2-4.png\" style=\"height: 400px; width:auto;\">\n",
     "\n",
     "Since all probabilities are conditional on background information, we can imagine that there is always a vertical conditioning bar, and the unconditional probability $P(A)$ is just shorthand for $P(A|B)$."
    ]
@@ -338,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ec11b5-5a67-418d-906b-067f0f34df76",
+   "id": "cc5544f6-ed76-4dbe-9ba5-6863a27b0cc7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,7 +536,19 @@
    "source": [
     "<h4>Example 2.5.12 (Baby Crying)</h4>\n",
     "\n",
-    "**can be found in notes?**"
+    "A certain baby cries only if she is hungry, tired, or both. Let $C$ be the event she is crying, $H$ be the event she is hungry, and $T$ be the event she is tired. $H$ and $T$ are independent. Let $P(C) = c$, $P(H) = h$, and $P(T) = t$.\n",
+    "\n",
+    "a) Find $c$, in terms of $h$ and $t$\n",
+    "\n",
+    "$P(C) = P(H \\cup T) = P(H) + P(T) - P(H \\cap T) = h + t - ht$\n",
+    "\n",
+    "b) Find $P(H|C)$, $P(T|C)$, and $P(H,T|C)$\n",
+    "\n",
+    "$P(H|C) = \\frac{ P(C|H) P(H) }{ P(C) } = \\frac{h}{c}$\n",
+    "\n",
+    "$P(T|C) = \\frac{ P(C|T) P(T) }{ P(C) } = \\frac{t}{c}$\n",
+    "\n",
+    "$P(H,T|C) = \\frac{ P(C|H,T) P(H,T) }{ P(C) } = \\frac{ht}{c}$"
    ]
   },
   {
@@ -573,7 +584,43 @@
    "source": [
     "<h4>Example 2.6.1 (Testing for a Rare Disease Continued)</h4>\n",
     "\n",
-    "**in notes?**"
+    "A disease affects $1\\%$ of the population and the test for it is $95\\%$ accurate (i.e., $P(T|D) = 0.95$). Fred tested positive for the disease. His probability of having the disease is as follows:\n",
+    "\n",
+    "We use the odds form of Bayes' rule. $D$ is the event he has the disease\n",
+    "\n",
+    "$\\frac{ P(D|T_1) }{ P(D^C|T_1) } = \\frac{ P(D) }{ P(D^C) } \\frac{ P(T_1 | D) }{ P(T_1 | D^C) } = 1/99 \\cdot \\frac{0.95}{0.05} = 0.19$\n",
+    "\n",
+    "Since\n",
+    "\n",
+    "$\\frac{ P(D|T_1) }{ 1 - P(D|T_1) } = 0.19$\n",
+    "\n",
+    "we have\n",
+    "\n",
+    "$P(D|T_1) = \\frac{0.19}{1 + 0.19} = 0.16$\n",
+    "\n",
+    "\n",
+    "Fred decides to get a second test, and the new test is independent of the first, with the same levels of specificity and sensitivity. Fred tests positive again. Find the probability that Fred has the disease.\n",
+    "\n",
+    "$T_1:$ The first test that was positive\n",
+    "$T_2:$ The second test that was positive\n",
+    "\n",
+    "Now, again using the odds form of Bayes' rule, we will consider the second test\n",
+    "\n",
+    "One-Step Method:\n",
+    "\n",
+    "$\\frac{ P(D|T_1 \\cap T_2) }{ P(D^C|T_1 \\cap T_2) } = \\frac{ P(D) }{ P(D^C) } \\frac{ P(T_1 \\cap T_2 | D) }{ P(T_1 \\cap T_2 | D^C) } = \\frac{1}{99} \\cdot \\frac{0.95^2}{0.05^2} = \\frac{361}{99} = 3.646$\n",
+    "\n",
+    "Odds of $3.646$ corresponds to a probability of $0.78$\n",
+    "\n",
+    "\n",
+    "Two-Step Method:\n",
+    "\n",
+    "$\\frac{ P(D|T_1) }{ P(D^C|T_1) } = \\frac{1}{99} \\cdot \\frac{0.95}{0.05} = 0.19$\n",
+    "\n",
+    "\n",
+    "$\\frac{ P(D|T_1 \\cap T_2) }{ P(D^C|T_1 \\cap T_2) } = \\frac{ P(D|T_1) }{ P(D^C|T_1) } \\frac{ P(T_2|D, T_1) }{ P(T_2|D^C, T_1) }$\n",
+    "\n",
+    "$= \\left( \\frac{1}{99} \\cdot \\frac{0.95}{0.05} \\right) \\frac{0.95}{0.05} = \\frac{361}{99} = 3.646$"
    ]
   },
   {
