--- a/Ch 4 Expectation.ipynb
+++ b/Ch 4 Expectation.ipynb
@@ -25,7 +25,7 @@
    "id": "4f151bd7-2f8e-4510-a581-88d2174247fe",
    "metadata": {},
    "source": [
-    "Story 4.3.1 (Geometric Distribution)\n",
+    "<h4>Story 4.3.1 (Geometric Distribution)</h4>\n",
     "\n",
     "Consider a sequence of independent Bernoulli trials, each with the same success probability, with trials performed until a success occurs. Let $X$ be the number of failures before the first successful trial. Then, $X$ has the Geometric distribution with parameter $p$.\n",
     "\n",
@@ -159,7 +159,7 @@
     "\n",
     "where $N_1$ is the number of toys until the first toy type you haven't seen before, $N_2$ is the additional number of toys until the second toy you haven't seen before, and so forth.\n",
     "\n",
-    "**img pg 162**\n",
+    "<img src=\"img/fig 4-6.png\" style=\"height: 200px; width:auto;\">\n",
     "\n",
     "By the story of the FS distribution, $N_2 \\text{~} FS((n-1)/n))$. After collecting the first toy type, there is a $1/n$ chance of getting the same toy you already had (i.e. failure) and a $(n-1)/n$ chance you'll get something else (success). $N_3$ is distributed $FS((n-2/n))$.\n",
     "\n",
@@ -299,7 +299,25 @@
     "\n",
     "The mean and variance of the Poisson distribution are both equal to $\\lambda$.\n",
     "\n",
-    "**get Poisson content from notes**"
+    "The mean and variance are both equal to $\\lambda$, the rate of occurrence. The Poisson distribution is often used in situations where we are counting the number of successes in a particular region or interval of time, and there are a large number of trials, each with a small possibility of success. For example, the number of emails you receive in an hour, or the number of earthquakes that occur in a region."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0901d990-0d9c-4785-8222-7d605c353fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "088ff1dc-0713-4222-bc0f-accc09c5b329",
+   "metadata": {},
+   "source": [
+    "<h4>Approximation 4.7.3 (Poisson Paradigm)</h4>\n",
+    "\n",
+    "Let $A_1, \\ldots, A_n$ be events with $p_j = P(A_j)$, where $N$ is large, the $p_j$ are small, and the $A_j$ are independent or weakly dependent. Let $X = \\sum_{j=1}^n I (A_j)$ count how many of the $A_j$ occur. Then $X$ is approximately distributed as $Pois(\\lambda)$, with $\\lambda = \\sum_{j=1}^n p_j$. The Poisson paradigm is also called the law of rare events. The interpretation of 'rare' is that the $p_j$ are small, not that $\\lambda$ is small."
    ]
   },
   {
