--- a/ATDSI 02 Statistics.ipynb
+++ b/ATDSI 02 Statistics.ipynb
@@ -524,6 +524,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0228baab-ccb5-4bdc-97ef-0c5e03355f3e",
+   "metadata": {},
+   "source": [
+    "<h4>Question 17</h4>\n",
+    "\n",
+    "Say you have two random variables $X$ and $Y$, each with a standard deviation. What is the variance of $aX + bY$ for constants $a$ and $b$?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "The variance of a sum of variables is assessed as:\n",
+    "\n",
+    "$Var(X+Y) = Var(X) + Var(Y) + 2 ~Cov(X,Y)$\n",
+    "\n",
+    "and that a constant coefficient of a random variable is assessed as $Var(aX) + a^2 Var(X)$. We have:\n",
+    "\n",
+    "$Var(aX + bY) = a^2 Var(X) + b^2 Var(Y) + 2ab ~Cov(X,Y)$\n",
+    "\n",
+    "which would provide the bounds on the designated variance; the range will depend on the covariance between $X$ and $Y$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a2fbe1-3200-4ce7-b480-cc395f30ff12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "f64688c3-db66-43a0-bbf9-8e2f16358c57",
    "metadata": {},
    "source": [
@@ -584,12 +614,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "626c002c-8b38-4998-bdae-3e5d02727d60",
+   "metadata": {},
+   "source": [
+    "<h4>Question 23</h4>\n",
+    "\n",
+    "Derive the mean and variance of the Uniform distribution U(a,b).\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "$f_X(x) = \\frac{1}{b-a}$\n",
+    "\n",
+    "Therefore, we calculate the mean as:\n",
+    "\n",
+    "$E[X] = \\int_a^b x ~f_X(x) ~dx = \\int_a^b \\frac{x}{b-a} ~dx = \\frac{x^2}{2(a-b)} \\big\\vert_a^b = \\frac{a+b}{2}$\n",
+    "\n",
+    "Similarly, the variance can be expressed as:\n",
+    "\n",
+    "$Var(X) = E[X^2] - E[X]^2$\n",
+    "\n",
+    "Giving us:\n",
+    "\n",
+    "$E[X^2] = \\int_a^b x^2 f_X(x) ~dx = \\int_a^b \\frac{x^2}{b-a} ~dx = \\frac{x^3}{3(a-b)} \\big\\vert_a^b = \\frac{a^2 + ab + b^2}{3}$\n",
+    "\n",
+    "Therefore:\n",
+    "\n",
+    "$Var(X) = \\frac{a^2 + ab^2 + b^2}{3} - \\left( \\frac{a+b}{2} \\right)^2 = \\frac{(b-a)^2}{12}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf42634d-6962-44f4-8b2d-8f7dd61e0d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ee909caf-c72d-427e-862e-c05f4255cbff",
    "metadata": {},
    "source": [
     "<h4>Question 29</h4>\n",
     "\n",
     "What are MLE and MAP? What is the difference between the two?\n",
+    "\n",
+    "<i>Answer:</i>\n",
     "\n",
     "MLE and MAP are ways of estimating variables in a probability distribution by producing a single estimate of a variable.\n",
     "\n",
@@ -634,6 +704,8 @@
     "<h4>Question 30</h4>\n",
     "\n",
     "Say you are given a random Bernoulli trial generator. How would you generate values from a standard normal distribution?\n",
+    "\n",
+    "<i>Answer:</i>\n",
     "\n",
     "$n$ Bernoulli trials form a binomial distribution with probability $p$ of success ($x_i=1$ means success and $x_i=0$ means failure). Assuming IID trials, we can compute the sample proportion for $\\hat{p}$ as follows:\n",
     "\n",
