--- a/ATDSI 01 Probability.ipynb
+++ b/ATDSI 01 Probability.ipynb
@@ -235,6 +235,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59496bad-fb4f-47ce-a345-1e9d06db0843",
+   "metadata": {},
+   "source": [
+    "<h4>Question 2</h4>\n",
+    "\n",
+    "Say you roll a die $3$ times. What is the probability of getting two sixes in a row?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "There are only two ways for 6s to be consecutive (roll $1$ and $2$, or roll $2$ and $3$). In the first case, the probability is given by:\n",
+    "\n",
+    "$2 \\left( \\frac{5}{6} \\right) \\left( \\frac{1}{6} \\right)^2 = \\frac{10}{216}$\n",
+    "\n",
+    "And for all $3$, the probability is $\\left( \\frac{1}{6} \\right)^3 = \\frac{1}{216}$\n",
+    "\n",
+    "So the desired probability is given by:\n",
+    "\n",
+    "$\\frac{10}{216} + \\frac{1}{216} = \\frac{11}{216}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e5a4a45-5e34-42c0-8ec9-72fd221d0b10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "32cdc774-3ca1-47c4-81cd-9f8c8df86aed",
    "metadata": {},
    "source": [
@@ -384,6 +414,8 @@
     "\n",
     "3 friends in Seattle tell you it is rainy, and each person has a $\\frac{1}{3}$ probability of lying. What is the probability that Seattle is rainy, assuming that the likelihood of rain on any given day is $0.25$?\n",
     "\n",
+    "<i>Answer:</i>\n",
+    "\n",
     "$P(A|B) = \\frac{ P(B|A) P(A) }{ P(B) }$\n",
     "$P(R|YYY) = \\frac{ P(YYY|R) P(R) }{ P(YYY) }$\n",
     "\n",
@@ -405,7 +437,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f26e02-6081-44e6-972a-0c28dafd1d9e",
+   "id": "8cb05796-4d59-4c2e-8c44-9538f48e0b66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e2327b-5fc6-4d15-b7d9-3777d84f89c1",
+   "metadata": {},
+   "source": [
+    "<h4>Question 11</h4>\n",
+    "\n",
+    "You and your friend are playing a game. The two of you will continue to toss a coin until the sequence $HH$ or $TH$ shows up. If $HH$ shows first, you win, and if $TH$ shows up first, your friend wins. What is the probability of you winning?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "Though there is a formal way to apply Markov chain to this problem, there is a trick to simplify it. If $T$ is ever flipped, you annot then reach $HH$ before $TH$. Therefore, the probability of winning is limited to just flipping an HH initially, which is given by:\n",
+    "\n",
+    "$P(HH) = \\frac{1}{2} \\cdot \\frac{1}{2} = \\frac{1}{4}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dd4caf8-1e02-46d4-83e9-cc6b70478112",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -510,7 +566,7 @@
     "\n",
     "Two tennis players will play until one person has scored $2$ more points than the other. The first player has a $60\\%$ chance of winning every point, and the second player has a $40\\%$ chance. What is the probability that the first player will win the match?\n",
     "\n",
-    "<h5>Answer</h5>\n",
+    "<i>Answer:</i>\n",
     "\n",
     "We can use a recursive formulation. Let $p$ be the probability that the first player wins. Assume the score is $0-0$. \n",
     "\n",
@@ -554,6 +610,38 @@
     "Thus, the desired probability is:\n",
     "\n",
     "$P(A \\cap B) = \\frac{40}{49} \\cdot \\frac{36}{40} = \\frac{36}{49}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5bdbff1-4ce9-434d-8001-19dfce4fe0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "804ed22e-a99b-4539-b75b-a94521fd3e3b",
+   "metadata": {},
+   "source": [
+    "<h4>Question 19</h4>\n",
+    "\n",
+    "A and B play the following game: a number from $1$ to $6$ is chosen, and A and B will toss a die until the first person throws a die showing side $k$. The reward is $\\$100$. How much is A willing to pay to play this game?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "Let the probability of A winning (if A goes first) be given by $P(A)$ and the probability of B winning be $P(B')$. Then:\n",
+    "\n",
+    "$P(A) = \\frac{1}{6} + \\frac{5}{6}(1-P(B'))$\n",
+    "\n",
+    "If A doesn't roll side $k$ immediately, then $P(B') = P(A)$, since now the game is symmetric with player B going first. Therefore:\n",
+    "\n",
+    "$P(A) = \\frac{1}{6} + \\frac{5}{6} - \\frac{5}{6} P(A)$\n",
+    "\n",
+    "Solving yields $P(A) = \\frac{6}{11}$ and $P(B) = 1 - P(A) = \\frac{5}{11}$. Since the payout is $\\$100$, A should be willing to pay an amount up to the difference in expected values in going first, which is:\n",
+    "\n",
+    "$100 \\left( \\frac{6}{11} - \\frac{5}{11} \\right) = \\frac{100}{11} \\approx 9.09$"
    ]
   },
   {
@@ -639,6 +727,8 @@
     "\n",
     "A biased coin, with probability p of landing on heads, is tossed n times. Write a recurrence relation for the probability that the total number of heads after $n$ tosses is even.\n",
     "\n",
+    "<i>Answer:</i>\n",
+    "\n",
     "Let $A$ be the event that the total number of heads after $n$ tosses is even, $B$ be the event that the first toss was tails, and $B'$ be the event that the first toss was heads. By the law of total probability, we have:\n",
     "\n",
     "$P(A) = P(A|B) P(B) + P(A|B') P(B)$\n",
@@ -646,6 +736,42 @@
     "Then, we can write the recurrence relation as:\n",
     "\n",
     "$p_n = (1-p)p_{n-1} + p(1-p_{n-1})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28f12c8-be98-4bfa-82b2-7243536fdd72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a81674-c46d-4f93-9229-5105277fc921",
+   "metadata": {},
+   "source": [
+    "<h4>Question 27</h4>\n",
+    "\n",
+    "Alice and Bob are playing a game. They play a series of rounds until one wins two more rounds than the other. Alice wins a round with probability $p$. What is the probability that Bob wins the overall series?\n",
+    "\n",
+    "<i>Answer:</i>\n",
+    "\n",
+    "Since Alice wins with probability p, Bob wins with probability $1-p$ (we'll denote it as $q$). Let $B$ represent the event that Bob wins $i$ matches for $i = 0,1,2,\\ldots$. Let $B^*$ denote the event that Bob wins the entire series. We can use the law of conditional probability as follows:\n",
+    "\n",
+    "$P(B^*) = P(B^*|B_2) P(B_2) + P(B^*|B_1) P(B_1) + P(B^*|B_0) P(B_0)$\n",
+    "\n",
+    "Since Bob wins each round with probability $q$, we have:\n",
+    "\n",
+    "$P(B_2) = q^2, P(B_1) = 2pq, P(B_0) = p^2$\n",
+    "\n",
+    "Substituting those values into the above expression yields:\n",
+    "\n",
+    "$P(B^*) = 1 \\cdot q^2 + P(B^*) \\cdot 2pq + 0 \\cdot p^2$\n",
+    "\n",
+    "Hence, the desired probability is the following:\n",
+    "\n",
+    "$P(B^*) = \\frac{q^2}{1-2qp}$"
    ]
   }
  ],
